src/objects/Representation__c.object
<CustomObject>
    <description>Which law firms represent which corporations?</description>
    <fields>
        <fullName>Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Attorney</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Representation</relationshipLabel>
        <relationshipName>Representation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <formula>Case__r.Case_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>text(Case__r.Case_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case_Leads__c</referenceTo>
        <relationshipLabel>Representation</relationshipLabel>
        <relationshipName>Representation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Representation</relationshipLabel>
        <relationshipName>Representation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission</label>
        <referenceTo>Commission__c</referenceTo>
        <relationshipLabel>Representation</relationshipLabel>
        <relationshipName>Representation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_New_Contact__c</fullName>
        <formula>IF( ISBLANK(Law_Firm__c), &quot;Law Firm is required to create Contact&quot;,  HYPERLINK(&quot;/003/e?name_firstcon2=&quot;+ Unicourt_Attorney_First_Name__c +&quot;&amp;name_lastcon2=&quot;+ Unicourt_Attorney_Last_Name__c +&quot;&amp;con4=&quot;+ Law_Firm__r.Name+&quot;&amp;con4_lkid=&quot;+Law_Firm__c +&quot;&amp;00N290000014eTJ=&quot;+ Unicourt_Attorney_Id__c , &quot;Click Here&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create New Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Attorney_Email__c</fullName>
        <formula>BLANKVALUE( Attorney__r.Email ,  Unicourt_Email_Address__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Attorney Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Attorney_Name__c</fullName>
        <formula>Attorney__r.Contact_Name__c  + Unicourt_Attorney_First_Name__c + &quot; &quot; + Unicourt_Attorney_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Attorney Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Client_Name__c</fullName>
        <formula>BLANKVALUE( Client__r.Name , Unicourt_Client_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Law_Firm__c</fullName>
        <formula>BLANKVALUE(Law_Firm__r.Name, Law_Firm_Text__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Law Firm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAttorneyMappedManually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is checked if Representation Mapped to Attorney after manual selection from detail page.</description>
        <label>Is Attorney Mapped Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClientMappedManually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Client Mapped Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLawFirmMappedManually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is LawFirm Mapped Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Law_Firm_Commission_Profile__c</fullName>
        <formula>BLANKVALUE(Attorney__r.Commission__r.Name, Law_Firm__r.Commission__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Law Firm Commission Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Firm_Id__c</fullName>
        <formula>Attorney__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Law Firm Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Firm_Text__c</fullName>
        <label>Law Firm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Law Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Representation (Law Firm)</relationshipLabel>
        <relationshipName>Representation_Law_Firms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Representation_Type__c</fullName>
        <label>Representation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defense</fullName>
                </value>
                <value>
                    <fullName>Plaintiff</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unicourt_Attorney_First_Name__c</fullName>
        <label>Attorney First Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unicourt_Attorney_Id__c</fullName>
        <label>Unicourt Attorney Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unicourt_Attorney_Last_Name__c</fullName>
        <label>Attorney Last Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unicourt_Client_Name__c</fullName>
        <label>Client Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unicourt_Email_Address__c</fullName>
        <label>Unicourt Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Unicourt_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unicourt Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unicourt_Mailing_Address__c</fullName>
        <label>Unicourt Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <label>Representation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unicourt_Client_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>contains</operation>
            <value>Shae</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>4/24/2019 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Representation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Representation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>